--- a/scratch pages/blank.html
+++ b/scratch pages/blank.html
@@ -9,6 +9,8 @@
 <header>
     <div class="classHeader">
         <a href="../index.html">Back to Professional Page</a>
+    <br>
+        <a hreft="game.html"> Play a Cool Sun Game
     </div>
 </header>
 <body>
