--- a/scratch pages/blank.html
+++ b/scratch pages/blank.html
@@ -10,7 +10,8 @@
     <div class="classHeader">
         <a href="../index.html">Back to Professional Page</a>
     <br>
-        <a hreft="game.html"> Play a Cool Sun Game
+    <br>
+        <a hreft="game.html"> Play a Cool Sun Game</a>
     </div>
 </header>
 <body>
