--- a/scratch pages/blank.html
+++ b/scratch pages/blank.html
@@ -16,7 +16,7 @@
 </header>
 <body>
    <div class="classBody"> 
-    <div class="listSection">
+    <div class="classList">
         <ol id="top" ><p>There are some important things you should know about the sun:</p>
             <li> It can give life
                 <ul> 
