--- a/scratch pages/blank.html
+++ b/scratch pages/blank.html
@@ -11,11 +11,11 @@
         <a href="../index.html">Back to Professional Page</a>
     <br>
     <br>
-        <a hreft="game.html"> Play a Cool Sun Game</a>
+        <a href="game.html"> Play a Cool Sun Game</a>
     </div>
 </header>
 <body>
-   <div class="classBody"> 
+   <div> 
     <div class="classList">
         <ol id="top" ><p>There are some important things you should know about the sun:</p>
             <li> It can give life
