--- a/scratch pages/blank.html
+++ b/scratch pages/blank.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="scratch_styles.css" rel="stylesheet"/>
 </head>
-<header>
+<header id="top">
     <div class="classHeader">
         <a href="../index.html">Back to Professional Page</a>
     <br>
@@ -17,7 +17,7 @@
 <body>
    <div> 
     <div class="classList">
-        <ol id="top" ><p>There are some important things you should know about the sun:</p>
+        <ol><p>There are some important things you should know about the sun:</p>
             <li> It can give life
                 <ul> 
                     <li>plants need sun to grow</li>
